# EasyStock

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: manage.py
backend/src/EasyStash/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/EasyStock/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/components/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/components/migrations/: 0001_initial.py
backend/src/products/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/src/products/migrations/: 0001_initial.py  0002_remove_product_components.py
backend/src/supplies/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/src/supplies/migrations/: 0001_initial.py  0002_alter_supply_status.py
backend/src/utils/: exceptions.py
backend/src/warehouses/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/src/warehouses/migrations/: 0001_initial.py  0002_stocktransaction_remove_stockitem_id_stockitem_pk_and_more.py  0003_alter_stocktransaction_extra_and_more.py  0004_stocktransaction_warehouses__timesta_1de4da_idx.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.js  router.js
frontend/src/components/: LayoutDefault.vue  LeftMenu.vue
frontend/src/scss/: globals.scss  mixins.scss  variables.scss
frontend/src/stores/: dataStore.js
frontend/src/utils/: components.js  config.js
frontend/src/views/: ComponentsView.vue  HomeView.vue
